Bugfixes
Generate group invite link
Click on preloaded sticker in history
Scrollbar in Firefox

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -2467,13 +2467,13 @@ img.img_fullsize {
   .composer_emoji_tooltip_tab_emoji_content & {
     width: 100%;
     margin: 0 0 3px;
-    padding: 0 5px;
+    padding: 0 5px 15px;
     line-height: 0;
   }
 
   .composer_emoji_tooltip_tab_stickers_content & {
     vertical-align: top;
-    padding: 0 5px;
+    padding: 0 5px 15px;
     margin: 0 0 3px;
     overflow-x: scroll;
     white-space: nowrap;
